# ckb-udt-staking

./: .gitignore  CLAUDE.md  README.md  netlify.toml
.cursor/: ckb-udt-staking.prd.txt  mcp.json
.cursor/rules/: ckb-dapp-smart-contract-development.mdc  ckb-ecosystem-development.mdc  dev_workflow.mdc  prd_workflow.mdc
.shrimp/: tasks.json
.taskmaster/: state.json
.taskmaster/tasks/: tasks.json
contracts/: Cargo.toml
contracts/contracts/ckb-udt-staking-program-lock/: Cargo.toml  README.md
contracts/contracts/ckb-udt-staking-program-type/: Cargo.toml  README.md
contracts/contracts/ckb-udt-staking-protocol-lock/: Cargo.toml  README.md
contracts/contracts/ckb-udt-staking-protocol-type/: Cargo.toml  README.md
contracts/tests/src/: tests.rs
dapp/: README-MOCK-DATA-SYSTEM.md  README-PROTOCOL-PROVIDERS.md  README-PROVIDERS.md  package.json  pnpm-lock.yaml
dapp/app/: layout.tsx  page.tsx
dapp/app/configure/: page.tsx
dapp/app/dashboard/: page.tsx
dapp/app/deploy/: page.tsx
dapp/app/deploy/success/: page.tsx
dapp/app/program/[id]/: page.tsx
dapp/app/program/[id]/manage/: page.tsx
dapp/app/programs/: page.tsx
dapp/app/protocol/: page.tsx
dapp/app/stake/[programId]/: page.tsx
dapp/lib/hooks/: use-program-data.ts  use-protocol-data.ts
dapp/lib/mock-data/: programs.ts  protocol.ts
dapp/lib/providers/: program-provider.tsx  protocol-provider.tsx
dapp/lib/services/: program-service.ts  protocol-service.ts
dapp/lib/types/: program.ts  protocol.ts
docs/recipes/: update_protocol.yaml
schemas/: ckb-udt-staking.mol
scripts/: README.md
