[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/ckb-udt-staking-program-type",
  "contracts/ckb-udt-staking-program-lock",
  "contracts/ckb-udt-staking-protocol-lock",
  "contracts/ckb-udt-staking-protocol-type",
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true
